
10/06/2007	frmb	various updates, started on TIMER handling
05/05/2007	frmb	some work on MOSTNEG/MOSTPOS operators
13/04/2007	frmb	started work on constraint/assertion handling
12/04/2007	frmb	various work on type-checks and array handling
09/04/2007	frmb	various constant-propagation updates
04/04/2007	frmb	more updates, added type-resolve pass to compiler
25/03/2007	frmb	various updates for parsing occam2, and various other things
01/01/2007	frmb	various tidy-ups in the front-end
30/12/2006	frmb	initial work on langauge definition files
29/12/2006	frmb	small addition to generic reduction language
29/12/2006	frmb	more work on PORTs, initial #PRAGMA handling
28/12/2006	frmb	some work on PORTs and various other minor updates
27/12/2006	frmb	updates to option handling
02/08/2006	frmb	split some of the MCSP code into separate front-end files
01/08/2006	frmb	fixed some bugs in the handling of channel direction specifiers and parallel usage checker
28/08/2006	frmb	more work on occam-pi ALTs
27/08/2006	frmb	various updates to multiway synchronisation handling
20/08/2006	frmb	separated out new multiway synchronisation code into mysync.c
27/07/2006	frmb	more MCSP work, start on occam-pi multi-way synchronisations
06/04/2006	frmb	fixed a slight bug in the parser
06/04/2006	frmb	did some more work on the RCX-BASIC code
22/03/2006	frmb	minor fiddling around
30/01/2006	frmb	made the front-end and back-end passes generic
22/01/2006	frmb	more MCSP stuffs, now producing fairly stable code
09/01/2006	frmb	various updates for MCSP, added lang-specific fetrans hook, more instructions
06/01/2006	frmb	some work on the MCSP parser (very experimental)
05/01/2006	frmb	some initial support for ALTs
04/01/2006	frmb	support for verifying signatures on generated code
04/01/2006	frmb	some support for dynamic mobile arrays
03/01/2006	frmb	cryptographic support for hashing and signing code-gen output
01/01/2006	frmb	various namespace additions, more constant propagation