@@ -1,4 +1,5 @@
 
+11/06/2007	frmb	more work on TIMER handling
 10/06/2007	frmb	various updates, started on TIMER handling
 05/05/2007	frmb	some work on MOSTNEG/MOSTPOS operators
 13/04/2007	frmb	started work on constraint/assertion handling
